--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -63,6 +63,7 @@
       width:900px;
       margin:0 auto;
       padding:10px;
+	  font-size:15px;
       }
       .header{
       height:auto; 
@@ -279,6 +280,7 @@
       font-family: arial, sans-serif;
       border-collapse: collapse;
       width: 100%;
+	  font-size:14px;
       }
       td, th {
       border: 1px solid #dddddd;
@@ -474,11 +476,11 @@
           <input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF' value="1M" placeholder="1M" onkeyup="myFunction()" >
         </div>
         <div style="float:left; width:100%;padding-bottom:15px;">
-          <label>Burst Duration (second)</label><br>
+          <label>Actual Burst Time (second)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
         </div>
         <div style="margin-top:10px; font-size:14px">
-          Estimated Burst Duration:
+          Estimated Actual Burst Time:
           <div style="display:none;clear:both; margin-top:5px">
           <span style='color: Crimson'>BD</span> = ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span><br>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-up-burst-duration" style='color: Crimson'>6</span> second<br>
@@ -500,11 +502,11 @@
         </div>
         <br>
         <div style="float:left; width:100%;margin-bottom:15px">
-          <label>Burst Duration (second)</label><br>
+          <label>Actual Burst Time (second)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
         </div>
         <div style="margin-top:10px; font-size:14px">
-          Estimated Burst Duration:
+          Estimated Actual Burst Time:
           <div style="display:none; clear:both; margin-top:5px">
           <span style='color: Crimson;'>BD</span> = ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span><br>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-down-burst-duration" style='color: Crimson'>6</span> second<br>
@@ -516,9 +518,9 @@
       </div>
         <div style="clear:both"></div>
         <div style="border-radius:5px; background-color:#ccc;padding:10px; margin-top:40px;font-size:12px; font-weight:700;">
-          <span style="font-size:12px"><b>Burst Duration Formula:</b></span><br>
+          <span style="font-size:12px"><b>Actual Burst Time Formula:</b></span><br>
           <div style='color: #555; margin-bottom:3px'>------------------------------------------------------------------------------</div>
-          <span style='color: Crimson'>Burst Duration</span> = <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> / <span style='color: #01A3DF'>Burst Limit</span><br>
+          <span style='color: Crimson'>Actual Burst Time</span> = <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> / <span style='color: #01A3DF'>Burst Limit</span><br>
           <div style='color: #555'>------------------------------------------------------------------------------</div>
           <div style="margin-top:5px; font-weight:normal">
             <span style='color: #555; font-size:11px'>Burst Threshold = Max Limit * 3/4</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='text-align:right;color: #555; font-size:11px'>K = Kbps  /  M = Mbps</span><br>
