--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -102,14 +102,14 @@
       .sidebar{
       float:left;
       width:50%;
-      height:272px;
+      height:auto;
       border-right:1px solid #aaa;
       padding-right:15px;
       }
       .sidebar2{
       float:left;
       width:50%;
-      height:272px;
+      height:auto;
       padding-left:15px;
       }
       .footer{
@@ -471,11 +471,11 @@
           <label>Max Limit (K/M)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="up-max-limit" style='color: green' placeholder="512K" value="512K" onkeyup="myFunction()">
         </div>
-        <div style="float:left; width:100%;">
+        <div style="float:left; width:100%;border-bottom:1px solid #999; padding-bottom:10px">
           <label>Burst Limit (K/M)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF' value="1M" placeholder="1M" onkeyup="myFunction()" >
         </div>
-        <div style="float:left; width:100%;padding-bottom:15px;">
+        <div style="float:left; width:100%;padding-bottom:10px;margin-top:4px">
           <label>Actual Burst Time (second)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
         </div>
@@ -496,12 +496,11 @@
           <label>Max Limit (K/M)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="down-max-limit" value="1M" style='color: green' placeholder="1M" onkeyup="myFunction()" >
         </div>
-        <div style="float:left; width:100%;">
+        <div style="float:left; width:100%; border-bottom:1px solid #999; padding-bottom:10px">
           <label>Burst Limit (K/M)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeyup="myFunction()">
         </div>
-        <br>
-        <div style="float:left; width:100%;margin-bottom:15px">
+        <div style="float:left; width:100%;margin-bottom:10px; margin-top:4px">
           <label>Actual Burst Time (second)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
         </div>
@@ -517,7 +516,7 @@
         </div>
       </div>
         <div style="clear:both"></div>
-        <div style="border-radius:5px; background-color:#ccc;padding:10px; margin-top:40px;font-size:12px; font-weight:700;">
+        <div style="border-radius:5px; background-color:#ccc;padding:10px; margin-top:28px;font-size:12px; font-weight:700;">
           <span style="font-size:12px"><b>Actual Burst Time Formula:</b></span><br>
           <div style='color: #555; margin-bottom:3px'>------------------------------------------------------------------------------</div>
           <span style='color: Crimson'>Actual Burst Time</span> = <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> / <span style='color: #01A3DF'>Burst Limit</span><br>
