--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -577,7 +577,7 @@
           <table id="mytable" style="font-weight:normal">
             <thead>
               <tr style="background-color: #ddd; " >
-                <td><b>Rate Limit for <span style="color:red">Hotspot</span> and <span style="color:red">PPPoE</span></b></td>
+                <td><b>Rate Limit for <span style="color:red">HOTSPOT</span> and <span style="color:red">PPPOE</span></b></td>
               </tr>
             </thead>
             <tr id="result" style="font-size:15px;font-weight:bold">
