--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -345,7 +345,7 @@
           <input onkeydown="upperCaseF(this)" type="text" id="burst-rate" style='color: #01A3DF' value="1M" placeholder="1M"  onkeypress="return event.charCode != 32">
         </div>
         <div style="float:left; width:100%;padding-bottom:15px;">
-          <label>Burst Duration (second)</label><br>
+          <label>Actual Burst Time (s)</label><br>
           <input type="text" id="interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32">
         </div>
         <button style="margin-bottom:25px;margin-bottom:10px" id="copyscript" type="button" onclick="myFunction()">CALCULATE</button>
