--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -398,8 +398,8 @@
           <br>
           <div style="font-size:13px;padding-left:10px;padding-right:10px">
             <b>PCQ Burst Result:</b><br>
-            <span style='color: #ff6600'>Burst Duration</span> = ( <span style='color: CornflowerBlue'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> ) / <span style='color: #01A3DF'>Burst Rate</span><br>
-            <span style='color: #ff6600'>Burst Duration</span> = ( <span id="for-burst-threshold" style='color: CornflowerBlue'>384K</span> * <span id="for-burst-time" style='color: DarkViolet'>16</span> ) / <span id="for-burst-rate" style='color: #01A3DF'>1M</span> = <span id="for-burst-duration" style='color: Crimson;font-weight:bold'>6</span> second<br>
+            <span style='color: #ff6600'>Actual Burst Time</span> = ( <span style='color: CornflowerBlue'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> ) / <span style='color: #01A3DF'>Burst Rate</span><br>
+            <span style='color: #ff6600'>Actual Burst Time</span> = ( <span id="for-burst-threshold" style='color: CornflowerBlue'>384K</span> * <span id="for-burst-time" style='color: DarkViolet'>16</span> ) / <span id="for-burst-rate" style='color: #01A3DF'>1M</span> = <span id="for-burst-duration" style='color: Crimson;font-weight:bold'>6</span> second<br>
             <div style='border-top:1px solid grey; margin-top:5px;padding-top:5px;color: black'>
               <span id="info-asal"> 
               <span>Every Client (sub queue) can get Burst Speed to</span> <span id="for-burst-rate2" style='color: #01A3DF;font-weight:bold'>1M</span> in <span id="for-burst-duration2" style='color: Crimson;font-weight:bold'>6</span> second.<br>
