--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -469,15 +469,15 @@
         <div style="float:left; width:100%;">
           <label><b>UPLOAD </b></label><br>
           <label>Max Limit (K/M)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="up-max-limit" style='color: green' placeholder="512K" value="512K" onkeyup="myFunction()">
+          <input onkeydown="upperCaseF(this)" type="text" id="up-max-limit" style='color: green' placeholder="512K" value="512K" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
         </div>
         <div style="float:left; width:100%;border-bottom:1px solid #999; padding-bottom:10px">
           <label>Burst Limit (K/M)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF' value="1M" placeholder="1M" onkeyup="myFunction()" >
+          <input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF' value="1M" placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" >
         </div>
         <div style="float:left; width:100%;padding-bottom:10px;margin-top:4px">
           <label>Actual Burst Time (s)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
+          <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
         </div>
         <div style="margin-top:10px; font-size:14px">
           Duration Actual Burst Time:
@@ -494,15 +494,15 @@
         <div style="float:left; width:100%;">
           <label><b>DOWNLOAD</b></label><br>
           <label>Max Limit (K/M)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="down-max-limit" value="1M" style='color: green' placeholder="1M" onkeyup="myFunction()" >
+          <input onkeydown="upperCaseF(this)" type="text" id="down-max-limit" value="1M" style='color: green' placeholder="1M" onkeypress="return event.charCode != 32" onkeyup="myFunction()" >
         </div>
         <div style="float:left; width:100%; border-bottom:1px solid #999; padding-bottom:10px">
           <label>Burst Limit (K/M)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeyup="myFunction()">
+          <input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
         </div>
         <div style="float:left; width:100%;margin-bottom:10px; margin-top:4px">
           <label>Actual Burst Time (s)</label><br>
-          <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
+          <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
         </div>
         <div style="margin-top:10px; font-size:14px">
           Duration Actual Burst Time:
