--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -462,7 +462,7 @@
         </div>
       </div>
       <div class="header">
-        <h1>MIKROTIK <span style="color:#ff6600">BURST LIMIT</span> CALCULATOR FOR ROUTEROS</h1>
+        <h1>MIKROTIK <span style="color:#ff6600">BURST LIMIT</span> CALCULATOR FOR ROUTER-OS</h1>
       </div>
       <div class="main-sidebar">	  
       <div class="sidebar">
