--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -315,7 +315,7 @@
         </div>	  
 	  </div>
       <div class="content">
-        <span style="margin-left:2px;font-size:14px"><b>COPY PASTE BURST RESULT TO QUEUE</b></span>
+        <span style="margin-left:2px;font-size:14px"><b>COPY PASTE BURST RESULT TO SIMPLE QUEUE OR QUEUE TREE</b></span>
         <div class="list-mangle" style="margin-bottom:10px">
           <table style="font-weight:normal">
             <thead>
