--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -288,6 +288,7 @@
           <input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
         </div>
         <div style="float:left; width:100%;margin-bottom:10px; margin-top:4px">
+          <label>Actual Burst Time (s)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeypress="return event.charCode != 32" onkeyup="myFunction()">
         </div>
         <div style="margin-top:10px; font-size:14px">
