--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -169,6 +169,7 @@
       color:white;
       }
       button {
+	  align-self: flex-end;
       color: #fff;
       background-color: #ff6600;
       border-color: #ff6600;
