--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -340,7 +340,7 @@
           </table>
         </div>
         <br>
-        <button style="margin-top:-5px" id="copyscript" type="button" onclick="myFunction();selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:normal;margin-left:10px"><b>Copy-Paste to Terminal, make sure this Script in Mangle on the Top position!
+        <button style="margin-top:-5px" id="copyscript" type="button" onclick="myFunction();selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:normal;margin-left:10px;font-size:14px"><b>Copy-Paste to Terminal, make sure this Script in Mangle on the Top position!
         </b></span>  
       </div>
       <div class="footer">
