--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -810,7 +810,7 @@
             </table>
           </div>
           <br>
-          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:normal;margin-left:10px"><b>Copy-Paste to Terminal, make sure script on the Top position!</b></span>
+          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:normal;margin-left:10px;font-size:14px"><b>Copy-Paste to Terminal, make sure script on the Top position!</b></span>
         </div>
       </div>
       <div class="footer">
