--- a/index.html
+++ b/index.html
@@ -620,6 +620,7 @@
       width:100%;
       }
       .logo-left {
+	  font-size:25px;
       justify-content: center;
       display: flex;
       width:100%;
