--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -58,7 +58,7 @@
       }
       .logo {
       border-bottom:0px solid #ccc;
-      margin-bottom:15px;
+      margin-bottom:20px;
       margin-top:15px;
       color: #ddd;
       font-size:30px;
@@ -83,6 +83,7 @@
       }
       .header{
       border-radius: 5px 5px 0 0;
+	  margin-top:20px;
       padding:10px;
       padding-top:10px;
       padding-bottom:5px;
@@ -313,7 +314,7 @@
       margin-left:10px;
       margin-right:10px;
       }
-      .header{border:none; background:none}
+      .header{border:none; background:none; margin-top:0px}
       .header h1 {font-size:18px}
       .logo-left{
       margin-top:-4px;
