--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -360,7 +360,7 @@
           <br>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <button type="button" value="Open window" onclick="printvoucher()">Print Voucher</button>
-          <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px" class="d-link"><a class="download" href="#" download="user.rsc">Download user.rsc</a></span><br>
+          <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px; font-weight:700" class="d-link"><a class="download" href="#" download="user.rsc">Download user.rsc</a></span><br>
         </div>
       </div>
       <div class="footer">
