--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -28,7 +28,7 @@
       -------------------------------------------------------------------- */  
       *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
       body, div, span, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, textarea, p, blockquote, th, td, tr, table{margin:0; padding:0}
-      body { font-size:16px; font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; margin:0px;}
+      body { font-size:15px; font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; margin:0px;}
       html, body {
       height: 100%;
       width:100%;
@@ -360,7 +360,7 @@
           <br>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <button type="button" value="Open window" onclick="printvoucher()">Print Voucher</button>
-          <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px; font-weight:700" class="d-link"><a class="download" href="#" download="user.rsc">Download user.rsc</a></span><br>
+          <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px; font-weight:700; font-size:14px" class="d-link"><a class="download" href="#" download="user.rsc">Download user.rsc</a></span><br>
         </div>
       </div>
       <div class="footer">
