--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -34,7 +34,7 @@
       width:100%;
       margin-top: 0px;
       padding:0;
-      font-size:16px;
+      font-size:15px;
       background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;  
       }
       * {
@@ -185,12 +185,12 @@
       }
       .d-link {
       color: #fff;
-      background-color: #fff;
+      background-color: #111;
       border-color: #ff6600;
       border:none;
       padding:7px;
-      width:200px;
-      font-size:16px !important;
+      width:180px;
+      font-size:14px !important;
       font-weight:bold;
       cursor: pointer;
       border-radius: 5px; 
@@ -403,7 +403,7 @@
           <br>
           <button style="margin-right:10px;" type="button" onclick="myFunction()">Generate Script</button>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
-          <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
+          <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px; font-size:14px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
           <div class="list-mangle2">
             <div style="text-align:center">
               <span id="msg-title" style="color:#fff; font-weight:bold; font-size:70px;">EXPIRED!</span><br>
