--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -75,6 +75,7 @@
       }
       .logo-right {
       float:right;
+	  margin-bottom:10px;
       }
       #wrap{
       max-width:1180px;
@@ -181,7 +182,7 @@
       margin-top:0px;
       padding:5px;
       width:60px;
-      font-size:14px;
+      font-size:15px;
       font-weight:bold;
       cursor: pointer;
       }
