--- a/mikrotik/vidio-domain-list.html
+++ b/mikrotik/vidio-domain-list.html
@@ -23,6 +23,20 @@ add list=vidio add=www.vidio.com
 add list=vidio add=m.vidio.com
 add list=vidio add=bbm.vidio.com
 add list=vidio add=api.vidio.com
+add list=vidio add=about.vidio.com
+add list=vidio add=chat.vidio.com
+add list=vidio add=int.vidio.com
+add list=vidio add=hermes.vidio.com
+add list=vidio add=staging.vidio.com
+add list=vidio add=live.vidio.com
+add list=vidio add=app.vidio.com
+add list=vidio add=email2.vidio.com
+add list=vidio add=support.vidio.com
+add list=vidio add=dev.vidio.com
+add list=vidio add=blog.vidio.com
+add list=vidio add=c.vidio.com
+add list=vidio add=tv.vidio.com
+add list=vidio add=careers.vidio.com
 add list=vidio add=cdn-production-thumbor-vidio.akamaized.net
 add list=vidio add=geo-id-media-vidio-com.akamaized.net
 add list=vidio add=token-geo-id-media-vidio-com.akamaized.net
