--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -187,15 +187,14 @@
       @media screen and (max-width:768px){
       .logo-left a{
       margin-top:10px !important;
-      font-size:20px;
+      font-size:25x;
       }          
       .logo-left img{
-      height: 30px;
-      width: 40px; 
+      height: 40px;
+      width: 50px; 
       margin-top:-5px !important;
       }  
-      /* -- .hide-homepage {display:none} -- */
-      h1{font-size:20px;  justify-content: center;}
+      h1{font-size:22px;  justify-content: center;}
       .mymenu {
       width:100% !important;
       } 
@@ -217,7 +216,16 @@
       .reg-area {
       margin:0 !important;
       }
-      @media screen and (max-width:600px){  
+      @media screen and (max-width:600px){ 
+      .logo-left a{
+      margin-top:10px !important;
+      font-size:20px;
+      }          
+      .logo-left img{
+      height: 30px;
+      width: 40px; 
+      margin-top:-5px !important;
+      }         
       .sidebar {
       padding:10px;
       }
@@ -233,7 +241,8 @@
       display: flex;
       justify-content: center;
       width:100%;	
-      }	
+      clear:both;
+      }
       .mymenu {
       padding-left:0px;
       padding-right:0px;
