--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -418,8 +418,11 @@
       justify-content: center;
       width:100%;
       }	  
-      .hide-homepage {display:none}
+      .avatar {display:none}
       }	  
+      @media screen and (max-width:350px){
+      .hide-homepage {display:none}
+      }	   
     </style>
   </head>
   <body>
