--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -263,8 +263,16 @@
       }   
       }
       @media screen and (max-width:500px){
+      .show-homepage-menu{
+      display: flex;
+      justify-content: center;
+      width:100%;
+      }	  
       .avatar {display:none}
-      }
+      }	  
+      @media screen and (max-width:350px){
+      .hide-homepage {display:none}
+      }	   
     </style>
   </head>
   <body>
@@ -286,11 +294,13 @@
         <div id="homepage" class="hide">
           <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
           <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-          <span class="avatar">
+          <span class="hide-homepage">
+		  <span class="avatar">
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
           </span>		
           <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
           <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+		  </span>
         </div>
       </div>
     </div>
