--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -17,7 +17,9 @@
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
+<link rel="stylesheet" href="./login/login.css">	
     <style>
+
       /* ------------------------------------------------------------------------------
       #################################################################################
       # Wifi.id WMS and Seamless Auto Login Script Generator By BuanaNETPBun.Github.io!
@@ -35,7 +37,7 @@
       width:100%;
       margin-top: 0px;
       padding:0;
-      font-size:16px;
+      font-size:15px;
       background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;   
       }
       * {
@@ -62,7 +64,7 @@
       text-decoration:none !important;
       }
       #wrap{
-      width:1120px;
+      max-width:1024px;
       margin:0 auto;
       }
       .header{
@@ -73,23 +75,23 @@
       border-top:1px solid #555;
       }
       .main-wrap{
-      display:flex;
+      display: flex  
       }     
       .content{
-      flex:1;
       float:right;
-      width:800px;
+      width:70%;
       padding: 10px;
       border-top:1px solid #ccc;
       border-bottom:1px solid #ccc;
       border-right:1px solid #ccc;
       background:#eee;
       height: auto;
-      border-radius: 0 5px 5px 0
+      border-radius: 0 5px 5px 0;
+        font-size:14px
       }
       .sidebar{
       float:left;
-      width:300px;
+      width:30%;
       Padding-top:8px;
       padding-left: 10px;
       Padding-right:10px;
@@ -98,6 +100,7 @@
       border:1px solid #ccc; 
       height: auto;
       border-radius: 5px 0 0 5px ;
+        font-size:14px
       }
       .footer{
       padding-top:15px;
@@ -176,7 +179,7 @@
       border:none;
       padding:8px;
       width:135px;
-      font-size:15px;
+      font-size:14px;
       font-weight:bold;
       cursor: pointer;
       border-radius: 5px; 
@@ -262,42 +265,89 @@
       table, tr, td {
       border: none;
       }
+      @media screen and (max-width:768px) {
+            .main-wrap{
+      display: block 
+      }  
+      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar{height:auto;margin-bottom:5px}
+      .header h1{max-width:100%;justify-content:center}
+      .logo-left a{margin-top:10px!important;font-size:25x}
+      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      h1{font-size:21px;text-align:center}
+      .mymenu{width:98%!important;}
+      .logo{width:100%}
+      .logo-left{justify-content:center;display:flex;width:100%}
+      .logo-right{justify-content:center;width:100%;display:flex}
+      .footer{font-size:13px}
+      #input-kota{width:100%!important}
+      .reg-area{margin:0!important}
+      }
+      @media screen and (max-width:600px) {
+      h1{font-size:19px}
+      .logo-left a{margin-top:10px!important;font-size:20px}
+      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .sidebar{padding:10px}
+      #wrap{padding:5px}
+      .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
+      .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
+      .mymenu{padding-left:0;padding-right:0}
+      .mymenu ul{background:none!important;justify-content:center;display:flex}
+      }
+      @media screen and (max-width:500px) {
+      .show-homepage-menu{display:flex;justify-content:center;width:100%}
+      .avatar{display:none}
+      }
+      @media screen and (max-width:350px) {
+      .hide-homepage{display:none}
+      }  
     </style>
-    <link rel="stylesheet" href="./login/login.css">
+    
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
-    <div id="wrap">
-      <div id="mymenu" class="mymenu">
-        <ul>
-          <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
-          <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
-          <li><a href="javascript:callmodal()">DONATE</a></li>
-          <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
-        </ul>
+    <div id="mymenu" class="mymenu">
+      <div class="mikrotik-logo" >
+        <img alt="mikrotik" src="./img/made-for-mikrotik.png">
+      </div>
+      <ul>
+        <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
+        <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
+        <li><a href="javascript:callmodal()">DONATE</a></li>
+        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
+      </ul>
+      <div class="show-homepage-menu">
         <div id="homepage" class="hide">
-          <button style="width:100px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <span class="hide-homepage">
           <span class="avatar">
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
-         </span>		
-        <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          </span>		
+          <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
           <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
-          
+          </span>
         </div>
       </div>
+    </div>
+    <div id="wrap">	
       <div class="logo">
-        <a href="https://buananetpbun.github.io/wifid-wms-seamless.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
-        <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+        <div class="logo-right" style="float:right;">
+          <div style="float:right">
+            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+          </div>
+          <div style="float:right; margin-right:5px; margin-top:1px">
+            <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+          </div>
         </div>
-        <div style="float:right; margin-right:5px; margin-top:1px">
-          <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+        <div class="logo-left" style="float:left;"> 
+          <a href="https://buananetpbun.github.io/pcc-calculation.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
+      <div style="clear:both"></div>
       <div class="header">
         <h1><span style="color:#ff6600">WIFI.ID WMS</span> AND <span style="color:#ff6600">SEAMLESS</span> AUTO LOGIN SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
       </div>
@@ -458,7 +508,7 @@
             </table>
           </div>
           <br>
-          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="font-weight:bold;margin-right:2px; float:right; padding-top:5px">[ <a target="_blank" href="https://1.bp.blogspot.com/-03W_oZJ_QXA/YNZ2PtmAEhI/AAAAAAAAZ18/atNJBMyXSDo2mo3ip3zng6y_9cEx-SV3QCLcBGAsYHQ/s1921/WMS%2Bauto%2Blogin%2Btutorial.jpg">View Tutorial</a> ]</span> <span style="padding:7px; font-weight:bold;margin-left:10px"><b>Copy-Paste Script to Terminal :)</b></span>
+          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="font-weight:bold;margin-right:2px; float:right; padding-top:5px">[ <a target="_blank" href="https://1.bp.blogspot.com/-03W_oZJ_QXA/YNZ2PtmAEhI/AAAAAAAAZ18/atNJBMyXSDo2mo3ip3zng6y_9cEx-SV3QCLcBGAsYHQ/s1921/WMS%2Bauto%2Blogin%2Btutorial.jpg">View Tutorial</a> ]</span> 
         </div>
       </div>
       <div class="footer">
